--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoos": "^0.0.1-security",
     "mongoose": "^6.7.3",
+    "node-fetch": "^3.3.2",
     "react-router-dom": "^6.4.3"
   },
   "name": "termi-lingodev",
@@ -19,5 +22,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@std/esm": "^0.26.0"
+  }
 }
